# ANTONI-Alpha

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  train.py
config/: base.yaml  finetune_2k.yaml  finetune_9k.yaml  finetune_antoni_alpha.yaml  pretrain_2k.yaml  pretrain_9k.yaml  pretrain_antoni_alpha.yaml
conversion_scripts/: convert_checkpoint.py
examples/: example_slide_features.pt  inference_example.py
src/antoni_alpha/: __init__.py  configuration_antoni_alpha.py
src/antoni_alpha/data/: __init__.py  wsi_dataset.py
src/antoni_alpha/models/: __init__.py  antoni.py  antoni_mixin.py  antoni_pretrained.py  antoni_projector.py
src/antoni_alpha/utils/: __init__.py  checkpoints.py  config.py  model_debug.py
